@@ -4,27 +4,16 @@
 
 using namespace dolfin;
 
-#include <dolfin.h>
-#include "MassMatrix2D.h"
-
-using namespace dolfin;
-
-class MySubDomain : public SubDomain
-{
-  bool inside(const dolfin::real *x, bool on_boundary) const
-  {
-    return true;
-  }
-};
-
 int main()
 {
-  UnitSquare mesh(3, 3);
+  Table table;
 
-  PETScMatrix A;
-  MassMatrix2DBilinearForm a;
-  MySubDomain subDomain;
-  assemble(A, a, mesh, subDomain);
+  table("uBLAS",  "Assemble") = 0.010;
+  table("uBLAS",  "Solve")    = 0.020;
+  table("PETSc",  "Assemble") = 0.011;
+  table("PETSc",  "Solve")    = 0.019;
+  table("Epetra", "Assemble") = 0.012;
+  table("Epetra", "Solve")    = 0.018;
 
-  A.disp();
+  table.disp();
 }
